--- a/views/admin/listcategory.ejs
+++ b/views/admin/listcategory.ejs
@@ -52,9 +52,8 @@
         </tr>
         <tr>
           <td></td>
-          <td>
+          <td><% if (per === "1") {%>
             <input type="submit" formaction="./addcategory" value="&#xf067;" class="fa fa-plus" />
-            <% if (per === "1") {%>
             <input type="submit" formaction="./updatecategory" value="&#xf040;" class="fa fa-pencil" id="btnUpdate" style="display: none" />
             <input type="submit" formaction="./deletecategory" value="&#xf1f8;" class="fa fa-trash" id="btnDelete" style="display: none" onclick="return confirm('ARE YOU SURE?')" />
             <% } %>
