--- a/views/customer/_inform.ejs
+++ b/views/customer/_inform.ejs
@@ -7,7 +7,7 @@
     <%  } %>
   </div>
   <div class="float-right" style="font-weight: bold;">
-    <a href="../mycart">My cart</a> have <b><%= (session.mycart) ? session.mycart.length : 0 %></b> items
+    <a href="../mycart" class="fa fa-shopping-cart"> have <b><%= (session.mycart) ? session.mycart.length : 0 %></b> items</a>
   </div>
   <div class="float-clear"></div>
 </div>
