--- a/views/customer/listproduct.ejs
+++ b/views/customer/listproduct.ejs
@@ -8,7 +8,7 @@
   <%- include('./_menu.ejs') %>
   <%- include('./_inform.ejs') %>
   <div class="text-center">
-    <h2 class="text-center">LIST PRODUCTS</h2>
+    <h2 class="text-center">LIST PRODUCTS IN <%=pro.name%></h2>
     <%  for (var prod of prods) { %>
     <div class="inline">
       <figure>
